fix sidebar spacing/layout

--- a/style.css
+++ b/style.css
@@ -39,14 +39,15 @@
 
 .sidebar {
     display: grid;
-    grid-template-rows: 1fr 3fr 2fr;
+    grid-template-rows: 1fr 5fr 2fr;
 }
 
 .sidebar-navigation {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 5fr;
     gap: 1em;
-    margin-bottom: 2em;
+    margin-bottom: 3em;
+    padding: 0px 20px;
 }
 
 .sidebar-title {
@@ -161,6 +162,14 @@ img {
 .sidebar {
     background-color: #1e9ce6;
     color: #ffffff;
+}
+
+.sidebar-title {
+    padding: 5px;
+}
+
+.sidebar-title h1 {
+    padding-top: 5px;
 }
 
 .sidebar svg {
